# py-sonarcloud

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml
tests/: test_sum.py
