[tool.poetry]
name = "py-sonarcloud"
version = "0.1.0"
description = ""
authors = ["Diego Mattozo <diegomattozo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
commitizen = "^2.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
