[tool.poetry]
name = "py-sonarcloud"
version = "0.1.0"
description = ""
authors = ["Diego Mattozo <diegomattozo@live.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
commitizen = "^2.20.3"
pre-commit = "^2.16.0"
black = "^21.12b0"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
